[package]
name = "buildkit-rs"
description = "Rust client for BuildKit"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
buildkit-rs-client = { path = "crates/client" }
buildkit-rs-ignore = { version = "0.1.0", path = "crates/ignore" }
buildkit-rs-llb = { path = "crates/llb" }
buildkit-rs-proto = { path = "crates/proto" }
buildkit-rs-reference = { path = "crates/reference" }
buildkit-rs-util = { path = "crates/util" }

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Grant Gurvis", "cicada.build"]
homepage = "https://cicada.build"
license = "Apache-2.0 OR MIT"
repository = "http://github.com/cicadahq/buildkit-rs"
