[package]
name = "buildkit-rs-client"
description = "Buildkit client in Rust"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
buildkit-rs-llb = { version = "0.1.0", path = "../llb" }
buildkit-rs-proto = { version = "0.1.0", path = "../proto" }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["process", "net", "macros"] }
tokio-util = "0.7.7"
tonic = "0.9.1"
tower = "0.4.13"
