[package]
name = "buildkit-rs-client"
description = "Buildkit client in Rust"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2.2.1"
buildkit-rs-llb = { version = "0.1.0", path = "../llb" }
buildkit-rs-proto = { version = "0.1.0", path = "../proto" }
buildkit-rs-util = { version = "0.1.0", path = "../util" }
bytes = "1.4.0"
futures = "0.3.28"
num = { version = "0.4.0", default-features = false, features = ["alloc"] }
oci-spec = "0.6.0"
path-clean = "1.0.1"
pin-project = "1.0.12"
rand = "0.8.5"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["process", "net", "macros", "fs"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["io"] }
tonic = "0.9.1"
tonic-health = "0.9.2"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["util", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"
