[package]
name = "buildkit-rs-llb"
description = "LLB library in Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
buildkit-rs-proto = { path = "../proto" }
prost = "0.11.8"
serde_json = "1.0.94"
sha2 = "0.10.6"
shlex = "1.1.0"
