[package]
name = "buildkit-rs-llb"
description = "LLB library in Rust"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
buildkit-rs-proto = { path = "../proto" }
buildkit-rs-reference = { version = "0.1.0", path = "../reference" }
camino = "1.1.4"
prost = "0.11.8"
serde_json = "1.0.94"
sha2 = "0.10.6"
shlex = "1.1.0"
