[package]
name = "buildkit-rs-proto"
description = "BuildKit gRPC API"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
prost = "0.11.8"
prost-types = "0.11.8"
tonic = "0.8.3"

[build-dependencies]
prost-build = "0.11.8"
tonic-build = "0.8.4"
