[package]
name = "buildkit-rs-proto"
description = "BuildKit gRPC API"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = "0.11.8"
prost-types = "0.11.8"
tonic = "0.9.1"

[build-dependencies]
prost-build = "0.11.8"
tonic-build = "0.9.1"
