[package]
name = "buildkit-rs-reference"
description = "A parser for image references, based on the reference go package"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
once_cell = "1"
regex = "1"
thiserror = "1"
