[package]
name = "buildkit-rs-util"
description = "BuildKit utilities for Rust"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# This crate should not have any dependencies, this restriction 
# prevents this crate from becoming a dumping ground and makes 
# it lightweight enough to be used in any other crates
